@@ -1,3 +1,4 @@
 DIST rjb-1.3.4.gem 61440 RMD160 ce0a37cf50508e51e41a9a04260dcab955f97683 SHA1 801c69f2d2c4a638acfa06342a6ded4af2e2ffab SHA256 f756a152130a2ac28e7d50d8dbbf766e03df635b6a513e31de3f2850f0d5abc5
-EBUILD rjb-1.3.4.ebuild 1082 RMD160 e234a9f99f86cb017a0d8e23b14e311ec4c8845c SHA1 e6cab7d5e1fe1a20afca7a52bd63f11d0b6164d4 SHA256 4d3e28d9a5edcd35ff443bcdc43ce3f3b559965c419ab8608a3767d9c00ae85d
-MISC ChangeLog 289 RMD160 a760747cdd9dfe598517268ec76cc9f4aead2495 SHA1 5811c0f160ef3cb1db7b7d754767c61b075f03ba SHA256 1e05553cd13b2ad0e935a11df155e989fffa4fdedaaa78140eaaec3e451bc2df
+EBUILD rjb-1.3.4-r1.ebuild 946 RMD160 d651257ed63dc3ccc3e7a5b4de20115f112d35a3 SHA1 f6d5a79b1deee3f3d15ef7cdc8b4cb310834e1fc SHA256 81cc2055c24e014c4b55067d073ba679a4411497b9ebd03ed20dc931c1d08dfa
+MISC ChangeLog 472 RMD160 7cd81c2e862556f68ac297ffdba2ff1f8c114ab8 SHA1 090b81b48bc812f4c3e4d1b5c006d6644b4f6c6b SHA256 5abc3e469580cd5bb6ad192baf7bf73a2aedfd0e9b398d60052b1e43070c12a6
+MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
