@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rjb-1.3.4-r1 (24 Jan 2011)
+
+  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> -rjb-1.3.4.ebuild,
+  +rjb-1.3.4-r1.ebuild:
+  Revision-bumped with a much cleaner and correct version.
+
 *rjb-1.3.4 (24 Jan 2011)
 
   24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> +rjb-1.3.4.ebuild:
